crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__bools__I134-native-bools.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/bools/I134-native-bools
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "true\n" [Continue]
> "false\n" [Done]
outcome: Done
