crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__bools__I135-bools-can-be-coerced.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/bools/I135-bools-can-be-coerced
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "2\n" [Continue]
> "-1\n" [Done]
outcome: Done
